# telegram-sender

./: README.rst  pyproject.toml
docs/: contributing.rst  index.rst  installation.rst
telegram_sender/types/: __init__.py
